[gd_scene load_steps=39 format=2]

[ext_resource path="res://src/scripts/AnimationMachine.gd" type="Script" id=1]
[ext_resource path="res://src/UI/healthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://test folder/test npc player/NPC_Player/states/Death.gd" type="Script" id=3]
[ext_resource path="res://test folder/test npc player/NPC_Player/states/Move.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/Hit_02.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/entities/shadow.png" type="Texture" id=6]
[ext_resource path="res://test folder/test npc player/NPC_Player/states/Attack.gd" type="Script" id=7]
[ext_resource path="res://src/scripts/StatesMachine.gd" type="Script" id=8]
[ext_resource path="res://assets/entities/players/red_brother_sheet_96x96.png" type="Texture" id=9]
[ext_resource path="res://assets/sfx/explosion-4.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/Explosion_01.wav" type="AudioStream" id=11]
[ext_resource path="res://test folder/test npc player/NPC_Player/NPC.gd" type="Script" id=12]
[ext_resource path="res://src/entities/items/weapons/melee/fists/Fists.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/entities/players/WeaponManager.gd" type="Script" id=14]

[sub_resource type="VisualShaderNodeColorConstant" id=8]

[sub_resource type="VisualShaderNodeTexture" id=9]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=10]
operator = 6

[sub_resource type="VisualShaderNodeVectorOp" id=11]
operator = 2

[sub_resource type="VisualShaderNodeBooleanUniform" id=12]
uniform_name = "active"

[sub_resource type="VisualShader" id=13]
code = "shader_type canvas_item;
uniform bool active;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// BooleanUniform:9
	bool n_out9p0 = active;

// Color:11
	vec3 n_out11p0 = vec3(1.000000, 1.000000, 1.000000);
	float n_out11p1 = 1.000000;

// VectorOp:6
	vec3 n_out6p0 = vec3(n_out9p0 ? 1.0 : 0.0) * n_out11p0;

// VectorOp:5
	vec3 n_out5p0 = max(n_out3p0, n_out6p0);

// Output:0
	COLOR.rgb = n_out5p0;
	COLOR.a = n_out3p1;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1040, 60 )
nodes/fragment/3/node = SubResource( 9 )
nodes/fragment/3/position = Vector2( 600, -40 )
nodes/fragment/5/node = SubResource( 10 )
nodes/fragment/5/position = Vector2( 860, -60 )
nodes/fragment/6/node = SubResource( 11 )
nodes/fragment/6/position = Vector2( 600, 100 )
nodes/fragment/9/node = SubResource( 12 )
nodes/fragment/9/position = Vector2( 400, 0 )
nodes/fragment/11/node = SubResource( 8 )
nodes/fragment/11/position = Vector2( 400, 120 )
nodes/fragment/connections = PoolIntArray( 3, 1, 0, 1, 3, 0, 5, 0, 6, 0, 5, 1, 5, 0, 0, 0, 9, 0, 6, 0, 11, 0, 6, 1 )

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = SubResource( 13 )
shader_param/active = false

[sub_resource type="Animation" id=23]
resource_name = "Accel"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationMachine/Movement")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=24]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1 ), Vector2( 2.2, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4.40001, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AnimationMachine/Movement")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Death_loop", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "Death_loop"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 52 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Decel_1"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationMachine/Movement")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Idle", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "Decel_2"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationMachine/Movement")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Idle", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Knockback"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationMachine/Movement")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Idle", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "Respawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 51, 50, 49, 48 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "respawn_player"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "Run_1"
length = 0.8
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.11, 0.12, 0.5, 0.51, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "Run_2"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.12, 0.16, 0.22, 0.4, 0.42, 0.46, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
}, {
"args": [  ],
"method": "spawn_dust"
} ]
}

[sub_resource type="Animation" id=34]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hit:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=35]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hit:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=15]
height = 4.0

[sub_resource type="CircleShape2D" id=21]
radius = 24.0

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 10.5, 27 )

[sub_resource type="CircleShape2D" id=18]
radius = 39.0128

[node name="NPC" type="KinematicBody2D" groups=["ENTITY", "enemy"]]
collision_layer = 2
collision_mask = 77
script = ExtResource( 12 )
entity_name = "NPC_PLAYER"
entity_type = "NPC"
max_speed = 675.0
max_health = 100.0

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 22 )
position = Vector2( 0, -48 )
texture = ExtResource( 9 )
hframes = 8
vframes = 8

[node name="WeaponManager" type="Node2D" parent="Sprite"]
position = Vector2( 0, 48 )
script = ExtResource( 14 )

[node name="HandPosition2D" type="Position2D" parent="Sprite/WeaponManager"]
position = Vector2( 9, -16 )

[node name="Fists" parent="Sprite/WeaponManager/HandPosition2D" instance=ExtResource( 13 )]
position = Vector2( 11, 0 )
despawnable = false
in_inventory = true
knockback_value = 0.0

[node name="AnimationMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Movement" type="AnimationPlayer" parent="AnimationMachine"]
root_node = NodePath("../..")
anims/Accel = SubResource( 23 )
anims/Death = SubResource( 24 )
anims/Death_loop = SubResource( 25 )
anims/Decel_1 = SubResource( 26 )
anims/Decel_2 = SubResource( 27 )
anims/Idle = SubResource( 28 )
anims/Knockback = SubResource( 29 )
anims/RESET = SubResource( 30 )
anims/Respawn = SubResource( 31 )
anims/Run_1 = SubResource( 32 )
anims/Run_2 = SubResource( 33 )

[node name="Hit" type="AnimationPlayer" parent="AnimationMachine"]
anims/Hit = SubResource( 34 )
anims/RESET = SubResource( 35 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 15 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -8 )
shape = SubResource( 21 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 48

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -27 )
shape = SubResource( 36 )

[node name="EngageRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngageRange"]
position = Vector2( 0, -8 )
shape = SubResource( 18 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 11 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 5 )

[node name="Smash" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 10 )

[node name="HealthBarPos" type="Node2D" parent="."]
z_index = 3

[node name="HealthBar" parent="HealthBarPos" instance=ExtResource( 2 )]
margin_top = -87.0
margin_bottom = -55.0

[connection signal="body_entered" from="EngageRange" to="." method="_on_EngageRange_body_entered"]
